add ucx to spdk

--- a/ourdemo/spdk/dpdkbuild/Makefile
+++ b/ourdemo/spdk/dpdkbuild/Makefile
@@ -72,9 +72,9 @@ $(error Automatic DPDK cross build is not supported. Please compile DPDK manuall
 with e.g. `meson build --cross-file config/arm/arm64_armv8_linux_gcc`)
 endif
 
-DPDK_CFLAGS += -I/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/install/include
-DPDK_LDFLAGS += -L/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/install/lib
-DPDK_CFLAGS += -I/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/src 
+# DPDK_CFLAGS += -I/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/install/include
+# DPDK_LDFLAGS += -L/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/install/lib
+# DPDK_CFLAGS += -I/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/src 
 
 # -I/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/src 
 # -I/global/home/users/rdmaworkshop12/SPDK/ourdemo/ucx-1.8.1/install/include 
